# slibbery

./: .gitignore  Cargo.toml  Makefile  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
examples/: .gitignore
examples/nvml/: Cargo.toml  Dockerfile  build.sh  download-libnvidia-ml.sh  download-nvidia-smi.sh  run.sh  setup.sh  test.sh
examples/nvml/src/: lib.rs
project-template/: README.md
project-template/src/: lib.rs
src/: cli.rs  elf.rs  generator.rs  lib.rs  main.rs  providers.rs  template.rs
src/commands/: header.rs
src/project-template/src/: lib.rs
src/providers/: header.rs  mod.rs
templates/: Cargo.toml
templates/src/: lib.rs
tests/: test.sh  test_lib.c  test_lib.h  test_program_dlopen.c  test_program_preload.c  test_unknown_lib.c  test_unknown_lib.h  test_unknown_symbols.c
