[package]
name = "dyll"
version = "0.1.0"
edition = "2021"

[dependencies]
goblin = "0.10.4"
regex = "1.10"
clap = { version = "4.5", features = ["derive"] }
bindgen = "0.69"
syn = "2.0"
quote = "1.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.0"
